--- a/evo/products.html
+++ b/evo/products.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>jwellery store</title>
 </head>
+<style>
+    .grid1{
+        display: grid;
+        grid-template-columns: 300px 300px 300px;
+        grid-template-rows: 400px 400px 400px;
+        grid-gap: 20px;
+       
+    }
+    .grid1 > div {
+        border: 1px solid black;
+    }
+    h1{
+        text-align: center;
+    }
+
+</style>
 <body>
-    
+    <h1>JWELLERY STORE</h1>
+    <div id="head"></div>
+    <div class = "grid1">
+    <div img src ="https://via.placeholder.com/350x150">neckless</div>
+    <div>ear ring</div>
+    <div>braclet</div>
+    <div >nose pin</div>
+    <div>bangles</div>
+    <div>anklet</div>
+</div>
 </body>
 </html>
