--- a/evo/products.html
+++ b/evo/products.html
@@ -7,18 +7,30 @@
     <title>jwellery store</title>
 </head>
 <style>
+    body{
+        background: cyan;
+    }
     .grid1{
         display: grid;
         grid-template-columns: 300px 300px 300px;
         grid-template-rows: 400px 400px 400px;
         grid-gap: 20px;
-       
+        background: beige;
+        margin-left: 70px;
+        max-width: 940px;
+        height:840px
     }
     .grid1 > div {
         border: 1px solid black;
+        background: cadetblue;
+       
     }
     h1{
         text-align: center;
+    }
+    .adbtn{
+      height:20px;
+      width: 100px;
     }
 
 </style>
@@ -26,12 +38,33 @@
     <h1>JWELLERY STORE</h1>
     <div id="head"></div>
     <div class = "grid1">
-    <div img src ="https://via.placeholder.com/350x150">neckless</div>
-    <div>ear ring</div>
-    <div>braclet</div>
-    <div >nose pin</div>
-    <div>bangles</div>
-    <div>anklet</div>
+    <div>
+        <p>neckless</p>
+        <button onclick="adbtn">add to cart</button>
+    </div>
+    <div>
+        <p>ear ring</p>
+        <button onclick="adbtn">add to cart</button>
+    </div>
+    <div>
+        <p>braclet</p>
+        <button onclick="adbtn">add to cart</button>
+    </div>
+    <div >
+        <P>nose pin</P>
+        <button onclick="adbtn">add to cart</button>
+    </div>
+    <div>
+        <p>bangles</p>
+        <button onclick="adbtn">add to cart</button>
+    </div>
+    <div>
+        <p>anklet</p>
+        <button onclick="adbtn">add to cart</button>
+    </div>
 </div>
 </body>
 </html>
+<script>
+
+</script>
