product added compelete

--- a/evo/products.html
+++ b/evo/products.html
@@ -28,10 +28,7 @@
     h1{
         text-align: center;
     }
-    .adbtn{
-      height:20px;
-      width: 100px;
-    }
+   
 
 </style>
 <body>
@@ -40,31 +37,33 @@
     <div class = "grid1">
     <div>
         <p>neckless</p>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
         <p>ear ring</p>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
         <p>braclet</p>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
     <div >
         <P>nose pin</P>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
         <p>bangles</p>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
         <p>anklet</p>
-        <button onclick="adbtn">add to cart</button>
+        <button onclick="Addcart()">add to cart</button>
     </div>
 </div>
 </body>
 </html>
 <script>
-
+    function Addcart(){
+        alert("item added to cart")
+    }
 </script>
