--- a/evo/products.html
+++ b/evo/products.html
@@ -28,6 +28,8 @@
     }
     h1{
         text-align: center;
+        color: grey;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     }
    #head{
       width: 30px;
