--- a/evo/products.html
+++ b/evo/products.html
@@ -64,28 +64,34 @@
 </div>
     <div class = "grid1">
     <div>
+         <img src ="https://via.placeholder.com/300x300"/>
         <p>neckless</p>
         <button onclick="Addcart()">add to cart</button>
-        <div img src ="https://via.placeholder.com/350x150"></div>
+        
     </div>
     <div>
+        <img src ="https://via.placeholder.com/300x300"/>
         <p>ear ring</p>
         <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
+        <img src ="https://via.placeholder.com/300x300"/>
         <p>braclet</p>
         <button onclick="Addcart()">add to cart</button>
     </div>
     <div >
+        <img src ="https://via.placeholder.com/300x300"/>
         <P>nose pin</P>
         <button onclick="Addcart()">add to cart</button>
     </div>
     <div>
+        <img src ="https://via.placeholder.com/300x300"/>
         <p>bangles</p>
         <button onclick="Addcart()">add to cart</button>
     
     </div>
     <div>
+        <img src ="https://via.placeholder.com/300x300"/>
         <p>anklet</p>
         <button onclick="Addcart()">add to cart</button>
     </div>
