--- a/evo/cart.html
+++ b/evo/cart.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .cart{
+        max-width: 500px;
+        
+    }
+</style>
 <body>
-    <div></div>
+    <h1>JWELLERY ONLINE</h1>
+    <div class = "cart">
+        <p>jwellery online</p>
+        <P>CART ITEMS</P>
+        <img src = "https://via.placeholder.com/150x150"/>
+        <p>neckless</p>
+
+    </div>
 </body>
 </html>
