--- a/evo/cart.html
+++ b/evo/cart.html
@@ -13,9 +13,11 @@
         grid-template-columns: 200px;
         grid-template-rows: 200px 200px;
         gap: 5px;
+        margin-left: 40px;
     }
     .cart > div {
         border: 1px solid blue;
+        background-color: burlywood;
     }
 </style>
 <body>
