--- a/coding_evo_13sep/evo.html
+++ b/coding_evo_13sep/evo.html
@@ -62,10 +62,13 @@
       float: left;
       clear: left;
       background-color: white;
+      color: black;
+      
+      
     }
     /*-------------popular program css------------------*/
     h1{
-   color: rgb(48, 47, 47);
+   color: rgb(83, 83, 83);
    text-align: center;
    font-size: 50px;
    font-family: 'Times New Roman', Times, serif;
@@ -105,6 +108,10 @@
 }
 h4{
     font-family: 'Times New Roman', Times, serif;
+    padding-left: 5px;
+}
+p{
+    padding-left: 5px; 
 }
 button{
     color: skyblue;
@@ -126,7 +133,7 @@ button{
        <!-- firstbox schoolarship html -->
     <div class="first_box">
         <div class="yellow">
-            <div class="circle"></div>
+            <div class="circle"> </div>
             <div class="bold">Scholarship</div>
             <div>Available</div>
         </div>
