--- a/New/index.html
+++ b/New/index.html
@@ -23,7 +23,8 @@
     <h1>LocalStorage</h1>
 
     <a href="cart.html"><button>Go to Cart</button></a>
-
+  <button onclick="sortLH()">sort low to high</button>
+  <button onclick="sortHL()">sort high to low</button>
     <div id="products"></div>
 </body>
 <script>
@@ -77,8 +78,9 @@
 
 let parent = document.getElementById("products")
 
-function showProducts() {
-data.forEach(function(product){
+function showProducts(d) {
+  parent.innerHTML = null;
+d.forEach(function(product){
 
 
 let div = document.createElement("div");
@@ -105,7 +107,7 @@ let div = document.createElement("div");
 
 })
 }
-    showProducts()
+    showProducts(data)
 
     if(localStorage.getItem("cart") === null) {
         localStorage.setItem("cart", JSON.stringify([]));
@@ -119,6 +121,20 @@ let div = document.createElement("div");
         localStorage.setItem("cart", JSON.stringify(products_cart));
 
         console.log(products_cart)
+    }
+
+    function sortLH() {
+        let arr = data.sort(function(a,b){
+          return a.price - b.price
+        });
+        showProducts(arr);
+    }
+
+    function sortHL() {
+        let arr = data.sort(function(a,b){
+          return b.price - a.price
+        });
+        showProducts(arr);
     }
 </script>
 </html>
