--- a/mini app assignments/youtube2.html
+++ b/mini app assignments/youtube2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube 1</title>
+    <title>Youtube 2</title>
 </head>
 <style>
-    #navbar {
+   #navbar {
         display: grid;
   grid-template-columns: repeat(9, 100px);
   justify-content: space-between;
@@ -51,7 +51,7 @@ margin-bottom: 40px;
     <div id="navbar">
        <img src="https://www.pngitem.com/pimgs/m/30-302949_menu-bar-icon-png-transparent-png.png"/>
         <img src="https://images.indianexpress.com/2017/08/youtube_logo_new-759.jpg" id="logo"/>
-            <input type="text" id="query" placeholder="search videos">
+            <input type="text" id="query" placeholder="search for a video">
             <button onclick="searchVideos()">search</button>
             <img src="https://static.thenounproject.com/png/2313-200.png"/>
             <img src="https://icon-library.com/images/white-video-camera-icon/white-video-camera-icon-15.jpg"/>
@@ -65,6 +65,7 @@ margin-bottom: 40px;
 </body>
 </html>
 <script>
+
 
 let videos = document.getElementById("videos");
 async function searchVideos(){
@@ -83,7 +84,7 @@ appendVideos(data.items);
 
 }
 
-
+searchVideos();
 
 
 function appendVideos(video_data) {
