--- a/evolution_18oct/home.html
+++ b/evolution_18oct/home.html
@@ -31,9 +31,9 @@
         products.forEach(function(product){
             let div = document.createElement("div");
             let img = document.createElement("img");
-            img.src = product.urlToImage;
+            img.src = product.article.urlToImage;
             let title = document.createElement("p");
-            title.innerText = product.title;
+            title.innerText = product.article.title;
           div.append(img,title)
 
           container.append(div)
