--- a/mini app assignments/closure/movie_2.html
+++ b/mini app assignments/closure/movie_2.html
@@ -60,6 +60,7 @@ try{
     let res = await fetch(`http://www.omdbapi.com/?apikey=2e11846f&s=${movie_name}`)
 
     let data = await res.json();
+    console.log(data)
    return data;
 
 } catch(e){
