--- a/mini app assignments/closure/movie_3.html
+++ b/mini app assignments/closure/movie_3.html
@@ -5,26 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-         #products {
-      margin: 5% 5% 10% 5%;
-      height: 700px;
-      display: grid;
-      grid-template-columns: 20% 20% 20% 20%;
-      grid-gap: 5%;
-      justify-content: center;
-  }
-  img{
-      width: 100%;
-  }
-    </style>
 </head>
 <body>
     <div id="products"></div>
 </body>
 </html>
 <script>
-    fetch("https://fakestoreapi.com/products")
+ fetch(`https://api.themoviedb.org/3/movie/550?api_key=38e5d5b85760e2f0de86435c320a3efc`)
          .then(function(res){
           return res.json();
          })
@@ -44,16 +31,16 @@
     let div = document.createElement("div");
     
     let img = document.createElement("img");
-    img.src = product.image
+    img.src = product.backdrop_path
     let name = document.createElement("p");
-    name.innerText = product.title
-    let price = document.createElement("p");
-         price.innerText = product.price;
+    name.innerText = product.name
+    
 
 
-         div.append(img,name,price)
+         div.append(img,name)
       container.append(div)
      });
          }
          showProducts(products);
+
 </script>
