food app login signup

--- a/evu_8nov/index.html
+++ b/evu_8nov/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        #navbar{
+            width: 100%;
+             background: rgb(194, 191, 191);
+            display: flex;
+        }
+        img{
+            width:40px;
+            margin-left: 3%;
+            margin-right: 3%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        .button{
+            padding-left: 2% ;
+            padding-right: 2%;
+        }
+    </style>
 </head>
 <body>
+    <div id="navbar">
+     <p class="button">home</p>
+     <img src="https://media-exp1.licdn.com/dms/image/C560BAQFvMiFOcxUHwA/company-logo_200_200/0/1520001997562?e=2159024400&v=beta&t=4zS8eGjXgYK9LULBPAGJF9EnOJcCO5gUhuAXgGXdlmE"/>
+     <p class="button">login</p>
+     <p class="button">signup</p>
+    </div>
     <div id= "products"></div>
 </body>
 </html>
