index and login signup page connected

--- a/evu_8nov/signup.html
+++ b/evu_8nov/signup.html
@@ -31,7 +31,7 @@
                         <input type="text" id="username" placeholder="username" />
                         <input type="number" id="mobile" placeholder="mobile" />
                         <input type="text" id="description" placeholder="description" />
-                        <button style="margin-top: 5px;"><a  style="text-decoration: none; color: black;" href="signin.html">Submit</a></button>
+                        <button style="margin-top: 5px;"><a  style="text-decoration: none; color: black;" href="login.html">Submit</a></button>
                       </form>
                 </div></div>
                 <div class="col-4"></div>
