--- a/evu_8nov/index.html
+++ b/evu_8nov/index.html
@@ -25,16 +25,23 @@
             padding-left: 2% ;
             padding-right: 2%;
         }
+        .img{
+            width: 100%;
+        }
+        .img >img{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
     <div id="navbar">
      <p class="button">home</p>
      <img src="https://media-exp1.licdn.com/dms/image/C560BAQFvMiFOcxUHwA/company-logo_200_200/0/1520001997562?e=2159024400&v=beta&t=4zS8eGjXgYK9LULBPAGJF9EnOJcCO5gUhuAXgGXdlmE"/>
-     <p class="button">login</p>
-     <p class="button">signup</p>
+     <p class="button"><a href="login.html">login</a></p>
+     <p class="button"><a href="signup.html">signup</a></p>
     </div>
     <div id= "products"></div>
+   <div class="img"> <img src="random.png"/> </div>
 </body>
 </html>
 <script>
