--- a/evu_8nov/login.html
+++ b/evu_8nov/login.html
@@ -24,14 +24,14 @@
                 <div class="col-3">
                     <div id="signup">
                     <form onsubmit="Signup(event)" id="signup-form">
-                        <h1>SignUp</h1>
+                        <h1>login page</h1>
                         <input type="text" id="name" placeholder="name" />
                         <input type="email" id="email" placeholder="email" />
                         <input type="password" id="password" placeholder="password" />
                         <input type="text" id="username" placeholder="username" />
                         <input type="number" id="mobile" placeholder="mobile" />
                         <input type="text" id="description" placeholder="description" />
-                        <button style="margin-top: 5px;"><a  style="text-decoration: none; color: black;" href="signin.html">Submit</a></button>
+                        <button style="margin-top: 5px;"><a  style="text-decoration: none; color: black;" href="index.html">Submit</a></button>
                       </form>
                 </div></div>
                 <div class="col-4"></div>
