youtube sigin added

--- a/mini app assignments/we/youtube2.html
+++ b/mini app assignments/we/youtube2.html
@@ -57,7 +57,7 @@ margin-bottom: 40px;
             <img src="https://icon-library.com/images/white-video-camera-icon/white-video-camera-icon-15.jpg"/>
             <img src="https://toppng.com/uploads/preview/grid-view-icon-icon-11553414054sph1l0smxi.png"/>
             <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-bell-512.png"/>
-            <img src="https://www.pngfind.com/pngs/m/93-938050_png-file-transparent-white-user-icon-png-download.png"/>
+           <a href="signup.html" ><img src="https://www.pngfind.com/pngs/m/93-938050_png-file-transparent-white-user-icon-png-download.png"/></a>
            
 
 </div>
