movie app signup added

--- a/mini app assignments/we/index.html
+++ b/mini app assignments/we/index.html
@@ -161,6 +161,7 @@
             <div id="ne">Movies</div>
             <div><input oninput="main()" id="inp" type="text" placeholder="Search">
                 <div id="search"></div>
+                <div><a href="moviesignup.html"><h1>profile</h1></a></div>
 
             </div>
 
